--- a/jupyter_local/fea_en.ipynb
+++ b/jupyter_local/fea_en.ipynb
@@ -49,8 +49,7 @@
     "    .config(\"spark.executor.cores\", \"1\")\n",
     "    .config(\"spark.executor.instances\", \"2\")\n",
     "    # --- Cấu hình MinIO (S3A) ---\n",
-    "    .config(\"spark.jars.packages\", \"org.apache.hadoop:hadoop-aws:3.3.4,com.amazonaws:aws-java-sdk-bundle:1.12.262\")\n",
-    "    .config(\"spark.hadoop.fs.s3a.endpoint\", \"http://localhost:9990\")\n",
+    "    .config(\"spark.hadoop.fs.s3a.endpoint\", \"http://minio-cs:9990\")\n",
     "    .config(\"spark.hadoop.fs.s3a.connection.ssl.enabled\", \"false\")\n",
     "    .config(\"spark.hadoop.fs.s3a.path.style.access\", \"true\")\n",
     "    .config(\"spark.hadoop.fs.s3a.aws.credentials.provider\", \"org.apache.hadoop.fs.s3a.SimpleAWSCredentialsProvider\")\n",
