--- a/services/jupyter/notebooks/Untitled.ipynb
+++ b/services/jupyter/notebooks/Untitled.ipynb
@@ -9,6 +9,8 @@
    "source": [
     "from pyspark.sql import SparkSession\n",
     "import pyspark.sql.functions as F \n",
+    "\n",
+    "\n",
     "master_url = \"spark://localhost:7077\"\n",
     "driver_host_ip = \"host.docker.internal\""
    ]
@@ -22,48 +24,12 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ":: loading settings :: url = jar:file:/opt/spark/jars/ivy-2.5.1.jar!/org/apache/ivy/core/settings/ivysettings.xml\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Ivy Default Cache set to: /root/.ivy2/cache\n",
-      "The jars for the packages stored in: /root/.ivy2/jars\n",
-      "org.apache.hadoop#hadoop-aws added as a dependency\n",
-      "com.amazonaws#aws-java-sdk-bundle added as a dependency\n",
-      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-f398e643-4102-4227-8ee8-7e9fd77b9051;1.0\n",
-      "\tconfs: [default]\n",
-      "\tfound org.apache.hadoop#hadoop-aws;3.3.4 in central\n",
-      "\tfound com.amazonaws#aws-java-sdk-bundle;1.12.262 in central\n",
-      "\tfound org.wildfly.openssl#wildfly-openssl;1.0.7.Final in central\n",
-      "downloading https://repo1.maven.org/maven2/org/apache/hadoop/hadoop-aws/3.3.4/hadoop-aws-3.3.4.jar ...\n",
-      "\t[SUCCESSFUL ] org.apache.hadoop#hadoop-aws;3.3.4!hadoop-aws.jar (494ms)\n",
-      "downloading https://repo1.maven.org/maven2/com/amazonaws/aws-java-sdk-bundle/1.12.262/aws-java-sdk-bundle-1.12.262.jar ...\n",
-      "\t[SUCCESSFUL ] com.amazonaws#aws-java-sdk-bundle;1.12.262!aws-java-sdk-bundle.jar (8473ms)\n",
-      "downloading https://repo1.maven.org/maven2/org/wildfly/openssl/wildfly-openssl/1.0.7.Final/wildfly-openssl-1.0.7.Final.jar ...\n",
-      "\t[SUCCESSFUL ] org.wildfly.openssl#wildfly-openssl;1.0.7.Final!wildfly-openssl.jar (158ms)\n",
-      ":: resolution report :: resolve 7677ms :: artifacts dl 9136ms\n",
-      "\t:: modules in use:\n",
-      "\tcom.amazonaws#aws-java-sdk-bundle;1.12.262 from central in [default]\n",
-      "\torg.apache.hadoop#hadoop-aws;3.3.4 from central in [default]\n",
-      "\torg.wildfly.openssl#wildfly-openssl;1.0.7.Final from central in [default]\n",
-      "\t---------------------------------------------------------------------\n",
-      "\t|                  |            modules            ||   artifacts   |\n",
-      "\t|       conf       | number| search|dwnlded|evicted|| number|dwnlded|\n",
-      "\t---------------------------------------------------------------------\n",
-      "\t|      default     |   3   |   3   |   3   |   0   ||   3   |   3   |\n",
-      "\t---------------------------------------------------------------------\n",
-      ":: retrieving :: org.apache.spark#spark-submit-parent-f398e643-4102-4227-8ee8-7e9fd77b9051\n",
-      "\tconfs: [default]\n",
-      "\t3 artifacts copied, 0 already retrieved (275421kB/860ms)\n",
-      "25/11/28 09:26:15 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
       "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "25/11/29 19:47:06 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -77,25 +43,20 @@
     "    .config(\"spark.executor.instances\", \"2\")\n",
     "    .config(\"spark.executor.cores\", \"1\")\n",
     "    .config(\"spark.executor.memory\", \"1G\")\n",
-    "    # S3A MinIO trong cùng network\n",
-    "    .config(\"spark.jars.packages\",\n",
-    "            \"org.apache.hadoop:hadoop-aws:3.3.4,com.amazonaws:aws-java-sdk-bundle:1.12.262\")\n",
     "    .config(\"spark.hadoop.fs.s3a.endpoint\", \"http://minio-cs:9990\")\n",
     "    .config(\"spark.hadoop.fs.s3a.connection.ssl.enabled\", \"false\")\n",
     "    .config(\"spark.hadoop.fs.s3a.path.style.access\", \"true\")\n",
     "    .config(\"spark.hadoop.fs.s3a.aws.credentials.provider\",\n",
     "            \"org.apache.hadoop.fs.s3a.SimpleAWSCredentialsProvider\")\n",
     "    .config(\"spark.hadoop.fs.s3a.access.key\", \"minio\")\n",
-    "    .config(\"spark.hadoop.fs.s3a.secret.key\", \"12345678\")\n",
-    "    # .config(\"spark.jars.packages\",\n",
-    "    #     \"com.google.cloud.hadoop:gcs-connector-hadoop3-2.2.17\")\n",
+    "    .config(\"spark.hadoop.fs.s3a.secret.key\", \"minio123\")\n",
     "    .getOrCreate()\n",
     ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c305a007-a739-4a89-98a8-545fc6d0f085",
    "metadata": {},
    "outputs": [
@@ -109,7 +70,7 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://878288b64fb2:4040\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://935c51b39f85:4040\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
@@ -125,10 +86,10 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7f9e6c060980>"
+       "<pyspark.sql.session.SparkSession at 0x7ff1219cd9d0>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "374a94a7-f0c9-445a-a33a-c67a81d9f668",
    "metadata": {},
    "outputs": [
@@ -188,7 +149,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "25/11/28 09:28:23 WARN MetricsConfig: Cannot locate configuration: tried hadoop-metrics2-s3a-file-system.properties,hadoop-metrics2.properties\n",
+      "25/11/29 19:47:44 WARN MetricsConfig: Cannot locate configuration: tried hadoop-metrics2-s3a-file-system.properties,hadoop-metrics2.properties\n",
       "                                                                                "
      ]
     }
@@ -219,14 +180,6 @@
     "df_load = spark.read.parquet(\"s3a://corin/corin_test.parquet\")\n",
     "df_load.printSchema()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "039aed03-0801-4438-b8b8-8c13c563c00c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -245,7 +198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
