--- a/services/jupyter/notebooks/Untitled.ipynb
+++ b/services/jupyter/notebooks/Untitled.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "32a70c0e-63c1-4ddc-94f2-4b6c311d60bd",
    "metadata": {
     "scrolled": true
@@ -50,6 +50,8 @@
     "            \"org.apache.hadoop.fs.s3a.SimpleAWSCredentialsProvider\")\n",
     "    .config(\"spark.hadoop.fs.s3a.access.key\", \"minio\")\n",
     "    .config(\"spark.hadoop.fs.s3a.secret.key\", \"minio123\")\n",
+    "    .config(\"spark.eventLog.enabled\", \"true\")  \n",
+    "    .config(\"spark.eventLog.dir\", \"file:/tmp/spark-events\")\n",
     "    .getOrCreate()\n",
     ")\n"
    ]
