--- a/jupyter_local/fea_en.ipynb
+++ b/jupyter_local/fea_en.ipynb
@@ -48,7 +48,9 @@
     "    .config(\"spark.executor.memory\", \"1G\")\n",
     "    .config(\"spark.executor.cores\", \"1\")\n",
     "    .config(\"spark.executor.instances\", \"2\")\n",
-    "    # --- Cấu hình MinIO (S3A) ---\n",
+    "    .config(\"spark.eventLog.enabled\", \"true\")  \n",
+    "    .config(\"spark.eventLog.dir\", \"file:/tmp/spark-events\")\n",
+    "    # --- Config MinIO (S3A) ---\n",
     "    .config(\"spark.hadoop.fs.s3a.endpoint\", \"http://minio-cs:9990\")\n",
     "    .config(\"spark.hadoop.fs.s3a.connection.ssl.enabled\", \"false\")\n",
     "    .config(\"spark.hadoop.fs.s3a.path.style.access\", \"true\")\n",
@@ -66,16 +68,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = spark.read.format(\"json\").load(\"s3a://corin/test.json\")"
+    "df = spark.read.parquet(\"s3a://corin/corin_test.parquet\")\n",
+    "df.printSchema()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1345023b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
